jasn/examples/invalid/invalid_unicode_short.jasn
// Invalid unicode escape - too few hex digits
{
  bad: "\u041"
}
